# fe2ms

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  environment.yml  setup.py
demos/: coated.msh  coated_demo.py  create_mesh_coated.py  create_mesh_rotor.py  rotor_air.step  sphere_demo.py  windturbine_demo.py
docs/: conf.py  index.rst  reference.rst
fe2ms/: __init__.py  assembly.py  assembly_nonsingular_aca.py  assembly_nonsingular_full.py  bi_space.py  materials.py  preconditioners.py  result_computations.py  systems.py  utility.py
fe2ms/bindings/: CMakeLists.txt  demcem_bindings.cpp  test_binding.py
fe2ms/bindings/test/: CMakeLists.txt  demcem_example_runner.cpp
